--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,13 @@
   </head>
 
   <body>
+  <% if notice %>
+  <div class="notice"><%= notice %></div>
+  <% end %>
+  <% if alert %>
+  <div class="alert"><%= alert %></div>
+  <% end %>
+  
     <%= yield %>
   </body>
 </html>
